--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -1,5 +1,5 @@
 @import "node_modules/hamburgers/_sass/hamburgers/hamburgers.scss";
-
+@import "node_modules/font-awesome/scss/font-awesome.scss";
 
 .main {
 	display: flex;
