--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -1,16 +1,64 @@
 @import "node_modules/hamburgers/_sass/hamburgers/hamburgers.scss";
 
-.main {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	min-height: 90vh;
-	background-color: gainsboro;
+.navbar {
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";       /* IE 8 */
+	filter: alpha(opacity=50);  /* IE 5-7 */
+	-moz-opacity: 0.5;          /* Netscape */
+	-khtml-opacity: 0.5;        /* Safari 1.x */
+	opacity: 0.5; 
+}
 
-	h1 {
-		font-family: 'Roboto', sans-serif;
-		font-size: 3em;
+.body {
+	font-family: 'Roboto', sans-serif;	
+}
+
+.main {
+	
+	min-height: 100vh;
+	background-color: #fff;
+
+	.img-circular {
+
+		position: relative;
+		top: 50%;
+		transform: translateY(50%);
+
+		img {
+			width: 45%;
+			display:block;
+    		margin:auto;
+    		-webkit-filter: grayscale(30%); /* Safari 6.0 - 9.0 */
+    		filter: grayscale(30%);
+    		border: 2px solid #363636;
+		}
+
+		h1 {
+			text-align: center;
+			font-family: 'Roboto', sans-serif;
+			padding-bottom: 0.5em;
+			font-size: 3em;
+		}
 	}
+}
+
+.skills {
+	height: 100vh;
+	background-color: #363636;
+
+	h2 {
+		text-align: center;
+	}
+
+	.skill {
+		color: #fff;
+		text-align: center;
+		font-size: 10em;
+	}
+}
+
+.about {
+	min-height: 100vh;
+	background-color: #fff;
 }
 
 .text-container {
