--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -1,29 +1,122 @@
 @import "node_modules/hamburgers/_sass/hamburgers/hamburgers.scss";
 
-.navbar {
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";       /* IE 8 */
-	filter: alpha(opacity=50);  /* IE 5-7 */
-	-moz-opacity: 0.5;          /* Netscape */
-	-khtml-opacity: 0.5;        /* Safari 1.x */
-	opacity: 0.5; 
+// variable declartions
+$green: #A2AD59;
+$brown: #8E936D;
+$blue-1: #598381;
+$blue-2: #177E89;
+$blue-3: #08605F;
+$white: #fff;
+$black: #202020;
+
+body {
+	font-family: 'Cabin', sans-serif;
+	color: #fff;
+	overflow-x: hidden;
+    overflow-y: scroll;
+
 }
 
-.body {
-	font-family: 'Roboto', sans-serif;	
+.hamburger-inner {
+	background-color: #fff;
+}
+
+.hamburger-inner::after {
+	background-color: #fff;
+}
+
+.hamburger-inner::before {
+	background-color: #fff;
+}
+
+.navbar {
+	background: none;
+	border-bottom: 1px solid $white;
+
+		button {
+			outline: 0;
+		}
+
+	.nav-title {
+		color: #fff;
+
+		&:hover {
+			cursor: pointer;
+			color: $green;
+		}
+	}	
+
+	.dropdown-content {
+		transition: all 0.5s;
+		overflow-y: hidden;
+		position: absolute;
+		width: 250px;
+		height: 0;
+		top: 4.8em;
+		z-index: 1030;
+		right: 0;
+		background-color: $blue-3;
+		border-bottom: 1px solid $white;
+		border-left: 1px solid $white;
+		border-right: 1px solid $white;
+
+			a {
+				transition: all 1s;
+				float: none;
+				text-align: center !important;
+				padding: 12px 16px;
+			    text-decoration: none;
+			    display: none;
+			    color: $green;
+
+			    	&:hover {
+			    		color: $white;
+			    		text-decoration: underline;
+			    	}
+			}
+	}
+
+	.show-hide {
+		display: block !important;
+	}
+
+	.toggle-visibilty {
+		height: 145px;
+	}
+}
+
+.bg-light {
+	background-color: $blue-3 !important;
+}
+
+.fixed-to-bottom {
+	position: absolute;
+	bottom: 0;
+	right: 10%;
+	padding-bottom: 1.5em;
+}
+
+.fixed-to-top {
+	position: absolute;
+	top: 0;
+	padding-top: 6.5em;	
+}
+
+.text-left {
+	text-align: left;
+}
+
+.text-right {
+	text-align: right;
 }
 
 .main {
-	
+	display: flex;
+    align-items: center !important;
 	min-height: 100vh;
-	background-color: #fff;
+	background-color: $blue-2;
 
-	.img-circular {
-
-		position: relative;
-		top: 50%;
-		transform: translateY(50%);
-
-		img {
+	img {
 			width: 45%;
 			display:block;
     		margin:auto;
@@ -32,33 +125,152 @@
     		border: 2px solid #363636;
 		}
 
-		h1 {
-			text-align: center;
-			font-family: 'Roboto', sans-serif;
-			padding-bottom: 0.5em;
-			font-size: 3em;
+	h1 {
+		text-align: left;
+		font-family: 'Cabin', sans-serif;
+		text-transform: capitalize;
+		color: #fff;
+		font-size: 4em;
+		font-weight: 900;
+	}
+
+	.main-title {
+
+	}
+
+	.main-message {
+		font-size: 3em;
+		font-family: 'Cabin', sans-serif;
+		text-transform: capitalize;
+
+			span {
+				border-bottom: 6px solid #fff;
+			}
+	}
+
+	// ANIMATION
+	.has-animation {
+
+		position: relative;
+
+		h1, img, span {
+		  opacity: 0;
+		}
+			&.animate-in {
+				h1, img, span {
+			  		animation: textHidden 0.1s 1.1s forwards;
+				}
+			&:before, &:after {
+				content: '';
+				position: absolute;
+				top: 0;
+				right: 0;
+				height: 100%;
+				z-index: 10;
+			}
+
+		    &:before {
+				background-color: $brown;
+		    }
+		    &:after {
+				background-color: $green;
+				animation-delay: .5s;
+		    }
+	  	}
+		&.animation-ltr.animate-in {
+			&:before {
+		  		animation: revealLTR 1.8s ease;
+			}
+			&:after {
+		  		animation: revealLTR 1s .6s ease;
+			}
+	  	}
+		&.animation-rtl.animate-in {
+			&:before {
+		 		animation: revealRTL 1.8s ease;
+			}
+			&:after {
+		  		animation: revealRTL 1s .6s ease;
+			}
 		}
 	}
 }
 
 .skills {
+	display: flex;
+    align-items: center !important;
 	height: 100vh;
-	background-color: #363636;
+	color: $black;
+	background-color: $white;
 
 	h2 {
 		text-align: center;
+		font-size: 3em;
+		font-weight: 900;
+		color: $blue-2;
+	}
+
+	hr {
+		color: $blue-2;
+		border-top: 1px solid $blue-2;
 	}
 
 	.skill {
 		color: #fff;
 		text-align: center;
 		font-size: 10em;
+		transition: transform 0.5s ease 0s;
+			&:hover {
+				cursor: pointer;
+				transform: rotate(360deg);
+			}
+	}
+
+	.html {
+		color: $green;
+	}
+	.styles {
+		color: $blue-3;
+	}
+	.js {
+		color: $blue-1;
+	}
+	.php {
+		color: $brown;
 	}
 }
 
 .about {
+	display: flex;
+    align-items: center !important;
+	color: #fff;
 	min-height: 100vh;
-	background-color: #fff;
+	background-color: $brown;
+}
+
+.niche {
+	display: flex;
+    align-items: center !important;
+	color: #fff;
+	min-height: 100vh;
+	background-color: $blue-2;
+	font-size: 1.4em;
+
+		hr {
+			border-top: 1px solid $white;
+		}
+
+		a {
+			color: $green;
+		}
+
+		p {
+			font-size: 0.8em;
+		}
+
+		.niche-icon {
+			font-size: 7em;
+		}
 }
 
 .text-container {
@@ -67,7 +279,7 @@
 
 .footer {
 
-	background-color: #363636;
+	background-color: $blue-3;
 	padding-top: 1em;
 	padding-bottom: 1em;
 
@@ -100,5 +312,46 @@
 		flex-direction: column;
 	    justify-content: center;
 	    align-items: center;
+	}
+}
+
+
+@keyframes revealRTL {
+	0%{
+		width: 0;
+		right: 0;
+	}
+	65%{
+		width: 100%;
+		right: 0;
+	}
+	100% {
+		width: 0;
+		right: 100%;
+  }
+}
+
+@keyframes revealLTR {
+	0%{
+		width: 0;
+		left: 0;
+	}
+	65%{
+		width: 100%;
+		left: 0;
+	}
+	100% {
+		width: 0;
+		left: 100%;
+	}
+}
+
+
+@keyframes textHidden {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
 	}
 }
