--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -1,4 +1,5 @@
 @import "node_modules/hamburgers/_sass/hamburgers/hamburgers.scss";
+@import "node_modules/bootstrap/scss/bootstrap.scss";
 
 // variable declartions
 $green: #A2AD59;
@@ -14,7 +15,6 @@ body {
 	color: #fff;
 	overflow-x: hidden;
     overflow-y: scroll;
-
 }
 
 .hamburger-inner {
@@ -67,10 +67,10 @@ body {
 				padding: 12px 16px;
 			    text-decoration: none;
 			    display: none;
-			    color: $green;
+			    color: $white;
 
 			    	&:hover {
-			    		color: $white;
+			    		color: $green;
 			    		text-decoration: underline;
 			    	}
 			}
@@ -113,23 +113,14 @@ body {
 .main {
 	display: flex;
     align-items: center !important;
-	min-height: 100vh;
-	background-color: $blue-2;
-
-	img {
-			width: 45%;
-			display:block;
-    		margin:auto;
-    		-webkit-filter: grayscale(30%); /* Safari 6.0 - 9.0 */
-    		filter: grayscale(30%);
-    		border: 2px solid #363636;
-		}
+	height: 100vh;
+	background-color: $white;
+	color: $blue-2;
 
 	h1 {
 		text-align: left;
 		font-family: 'Cabin', sans-serif;
 		text-transform: capitalize;
-		color: #fff;
 		font-size: 4em;
 		font-weight: 900;
 	}
@@ -144,56 +135,18 @@ body {
 		text-transform: capitalize;
 
 			span {
-				border-bottom: 6px solid #fff;
+				border-bottom: 6px solid $blue-2;
 			}
 	}
 
-	// ANIMATION
-	.has-animation {
+}
 
-		position: relative;
-
-		h1, img, span {
-		  opacity: 0;
-		}
-			&.animate-in {
-				h1, img, span {
-			  		animation: textHidden 0.1s 1.1s forwards;
-				}
-			&:before, &:after {
-				content: '';
-				position: absolute;
-				top: 0;
-				right: 0;
-				height: 100%;
-				z-index: 10;
-			}
-
-		    &:before {
-				background-color: $brown;
-		    }
-		    &:after {
-				background-color: $green;
-				animation-delay: .5s;
-		    }
-	  	}
-		&.animation-ltr.animate-in {
-			&:before {
-		  		animation: revealLTR 1.8s ease;
-			}
-			&:after {
-		  		animation: revealLTR 1s .6s ease;
-			}
-	  	}
-		&.animation-rtl.animate-in {
-			&:before {
-		 		animation: revealRTL 1.8s ease;
-			}
-			&:after {
-		  		animation: revealRTL 1s .6s ease;
-			}
-		}
-	}
+.about {
+	display: flex;
+    align-items: center !important;
+	color: #fff;
+	height: 100vh;
+	background-color: $brown;
 }
 
 .skills {
@@ -240,20 +193,12 @@ body {
 	}
 }
 
-.about {
-	display: flex;
-    align-items: center !important;
-	color: #fff;
-	min-height: 100vh;
-	background-color: $brown;
-}
-
 .niche {
 	display: flex;
     align-items: center !important;
 	color: #fff;
-	min-height: 100vh;
-	background-color: $blue-2;
+	height: 100vh;
+	background-color: $brown;
 	font-size: 1.4em;
 
 		hr {
@@ -261,7 +206,7 @@ body {
 		}
 
 		a {
-			color: $green;
+			color: $blue-2;
 		}
 
 		p {
@@ -275,6 +220,53 @@ body {
 
 .text-container {
 	max-width: 50%;
+}
+
+// ANIMATION
+.has-animation {
+
+	position: relative;
+
+	h1, img, span {
+	  opacity: 0;
+	}
+		&.animate-in {
+			h1, img, span {
+		  		animation: textHidden 0.1s 1.1s forwards;
+			}
+		&:before, &:after {
+			content: '';
+			position: absolute;
+			top: 0;
+			right: 0;
+			height: 100%;
+			z-index: 10;
+		}
+
+	    &:before {
+			background-color: $blue-1;
+	    }
+	    &:after {
+			background-color: $blue-3;
+			animation-delay: .5s;
+	    }
+  	}
+	&.animation-ltr.animate-in {
+		&:before {
+	  		animation: revealLTR 1.8s ease;
+		}
+		&:after {
+	  		animation: revealLTR 1s .6s ease;
+		}
+  	}
+	&.animation-rtl.animate-in {
+		&:before {
+	 		animation: revealRTL 1.8s ease;
+		}
+		&:after {
+	  		animation: revealRTL 1s .6s ease;
+		}
+	}
 }
 
 .footer {
@@ -354,4 +346,62 @@ body {
 	100% {
 		opacity: 1;
 	}
+}
+
+// Media Queries
+/* Landscape phones and down */
+@media (max-width: 480px) {
+	.main {
+
+		h1 {
+			font-size: 1.4em;
+		}
+
+		.main-message {
+			font-size: 1.4em;
+		}
+	}
+
+	.about {
+		height: 100%;
+		padding-top: 0.75em;
+		padding-bottom: 0.75em;
+	}
+
+	.skills {
+		height: 100%;
+		padding-top: 0.75em;
+		padding-bottom: 0.75em;
+	}
+
+	.niche {
+		height: 100%;
+		padding-top: 0.75em;
+		padding-bottom: 0.75em;
+	}
+
+	.footer {
+
+		padding-top: 0.75em;
+		padding-bottom: 0.75em;
+
+		.icons {
+			font-size: 3em;
+		}
+	}
+}
+
+/* Landscape phone to portrait tablet */
+@media (max-width: 767px) {
+
+}
+
+/* Portrait tablet to landscape and desktop */
+@media (min-width: 768px) and (max-width: 979px) {
+
+}
+
+/* Large desktop */
+@media (min-width: 1200px) {
+
 }
