--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -7,7 +7,7 @@ $brown: #8E936D;
 $blue-1: #598381;
 $blue-2: #177E89;
 $blue-3: #08605F;
-$white: #fff;
+$white: #F8F8FF;
 $black: #202020;
 
 body {
@@ -18,27 +18,26 @@ body {
 }
 
 .hamburger-inner {
-	background-color: #fff;
+	background-color: $blue-1;
 }
 
 .hamburger-inner::after {
-	background-color: #fff;
+	background-color: $blue-1;
 }
 
 .hamburger-inner::before {
-	background-color: #fff;
+	background-color: $blue-1;
 }
 
 .navbar {
 	background: none;
-	border-bottom: 1px solid $white;
 
 		button {
 			outline: 0;
 		}
 
 	.nav-title {
-		color: #fff;
+		color: $blue-1;
 
 		&:hover {
 			cursor: pointer;
@@ -55,19 +54,16 @@ body {
 		top: 4.8em;
 		z-index: 1030;
 		right: 0;
-		background-color: $blue-3;
-		border-bottom: 1px solid $white;
-		border-left: 1px solid $white;
-		border-right: 1px solid $white;
 
 			a {
 				transition: all 1s;
 				float: none;
-				text-align: center !important;
+				text-transform: uppercase;
+				text-align: right !important;
 				padding: 12px 16px;
 			    text-decoration: none;
 			    display: none;
-			    color: $white;
+			    color: $blue-1;
 
 			    	&:hover {
 			    		color: $green;
@@ -110,6 +106,11 @@ body {
 	text-align: right;
 }
 
+.padding-0{
+    padding-right:0;
+    padding-left:0;
+}
+
 .main {
 	display: flex;
     align-items: center !important;
@@ -120,7 +121,7 @@ body {
 	h1 {
 		text-align: left;
 		font-family: 'Cabin', sans-serif;
-		text-transform: capitalize;
+		text-transform: uppercase;
 		font-size: 4em;
 		font-weight: 900;
 	}
@@ -144,9 +145,46 @@ body {
 .about {
 	display: flex;
     align-items: center !important;
-	color: #fff;
+	color: $blue-1;
 	height: 100vh;
-	background-color: $brown;
+	background-color: $white;
+
+		h2 {
+			font-size: 3em;
+			font-weight: 900;
+			text-transform: uppercase;
+		}
+
+		a {
+			color: $green;
+		}
+
+		p {
+			font-size: 1.2em;
+			font-weight: 100;
+		}
+
+		.top {
+			padding-top: 0.5em;
+			padding-bottom: 0.5em;
+
+				span {
+					border-bottom: 6px solid $brown;
+				}
+		}
+
+		.bottom {
+			// background-color: $blue-2;
+			padding-top: 0.5em;
+			padding-bottom: 0.5em;
+		}
+
+		.profile {
+			img {
+				// border-radius: 100%;
+				width: 50%;
+			}
+		}
 }
 
 .skills {
@@ -158,6 +196,7 @@ body {
 
 	h2 {
 		text-align: center;
+		text-transform: uppercase;
 		font-size: 3em;
 		font-weight: 900;
 		color: $blue-2;
@@ -168,6 +207,15 @@ body {
 		border-top: 1px solid $blue-2;
 	}
 
+	.top {
+		padding-top: 0.5em;
+		padding-bottom: 0.5em;
+
+			span {
+				border-bottom: 6px solid $brown;
+			}
+	}
+
 	.skill {
 		color: #fff;
 		text-align: center;
@@ -175,7 +223,6 @@ body {
 		transition: transform 0.5s ease 0s;
 			&:hover {
 				cursor: pointer;
-				transform: rotate(360deg);
 			}
 	}
 
@@ -196,26 +243,42 @@ body {
 .niche {
 	display: flex;
     align-items: center !important;
-	color: #fff;
+	color: $blue-1;
 	height: 100vh;
-	background-color: $brown;
-	font-size: 1.4em;
 
-		hr {
-			border-top: 1px solid $white;
+		h2 {
+			text-transform: uppercase;
+			font-size: 3em;
+			font-weight: 900;
+			color: $blue-2;
 		}
 
 		a {
 			color: $blue-2;
+			font-weight: bold;
 		}
 
 		p {
-			font-size: 0.8em;
+			font-size: 1.2em;
+			font-weight: 100;
+		}
+
+		.top {
+			padding-top: 0.5em;
+			padding-bottom: 0.5em;
+
+				span {
+					border-bottom: 6px solid $brown;
+				}
 		}
 
 		.niche-icon {
 			font-size: 7em;
 		}
+}
+
+.contact {
+	
 }
 
 .text-container {
@@ -268,6 +331,15 @@ body {
 		}
 	}
 }
+
+// Shapes
+.diamond {
+	width: 350px;
+    height: 350px;
+	background-color: $blue-1;
+	background-size: cover;
+	clip-path: polygon(0% 100%, 100% 100%, 0% 0%);
+} 
 
 .footer {
 
