--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -9,6 +9,7 @@ $blue-2: #177E89;
 $blue-3: #08605F;
 $white: #fbfbfb;
 $black: #202020;
+$red: #b71212;
 
 body {
 	font-family: 'Cabin', sans-serif;
@@ -286,10 +287,27 @@ body {
 
 		.form-success {
 			display: none;
+			text-align: center;
+			font-size: 2em;
+			padding-top: 2em;
 		}
 
 		.form-fail {
 			display: none;
+			text-align: center;
+			font-size: 2em;
+			padding-top: 2em;
+			color: $red;
+		}
+
+		.parsley-errors-list {
+			list-style: none;
+			color: $red;
+		}
+
+		.parsley-required {
+			text-align: right;
+   	 		padding-top: 0.5em;
 		}
 }
 
@@ -384,14 +402,97 @@ body {
 	}
 }
 
-// Shapes
-.diamond {
-	width: 350px;
-    height: 350px;
-	background-color: $blue-1;
-	background-size: cover;
-	clip-path: polygon(0% 100%, 100% 100%, 0% 0%);
-} 
+.about-animation {
+
+	position: relative;
+
+	h1, img, span, p, a {
+	  opacity: 0;
+	}
+		&.animate-in {
+			h1, img, span, p, a {
+		  		animation: textHidden 0.1s 1.1s forwards;
+			}
+		&:before, &:after {
+			content: '';
+			position: absolute;
+			top: 0;
+			right: 0;
+			height: 100%;
+			z-index: 10;
+		}
+
+	    &:before {
+			background-color: $blue-1;
+	    }
+	    &:after {
+			background-color: $blue-3;
+			animation-delay: .5s;
+	    }
+  	}
+	&.animation-ltr.animate-in {
+		&:before {
+	  		animation: revealLTR 1.8s ease;
+		}
+		&:after {
+	  		animation: revealLTR 1s .6s ease;
+		}
+  	}
+	&.animation-rtl.animate-in {
+		&:before {
+	 		animation: revealRTL 1.8s ease;
+		}
+		&:after {
+	  		animation: revealRTL 1s .6s ease;
+		}
+	}
+}
+
+.niche-animation {
+
+	position: relative;
+
+	h1, img, span, p, i {
+	  opacity: 0;
+	}
+		&.animate-in {
+			h1, img, span, p, i {
+		  		animation: textHidden 0.1s 1.1s forwards;
+			}
+		&:before, &:after {
+			content: '';
+			position: absolute;
+			top: 0;
+			right: 0;
+			height: 100%;
+			z-index: 10;
+		}
+
+	    &:before {
+			background-color: $blue-1;
+	    }
+	    &:after {
+			background-color: $blue-3;
+			animation-delay: .5s;
+	    }
+  	}
+	&.animation-ltr.animate-in {
+		&:before {
+	  		animation: revealLTR 1.8s ease;
+		}
+		&:after {
+	  		animation: revealLTR 1s .6s ease;
+		}
+  	}
+	&.animation-rtl.animate-in {
+		&:before {
+	 		animation: revealRTL 1.8s ease;
+		}
+		&:after {
+	  		animation: revealRTL 1s .6s ease;
+		}
+	}
+}
 
 .footer {
 
@@ -413,15 +514,38 @@ body {
 		font-size: 4em;
 		color: #fff;
 		padding: 0.5em;
-		-webkit-transition: color 0.5s ease-out;
-		-moz-transition: color 0.5s ease-out;
-		-o-transition: color 0.5s ease-out;
-		transition: color 0.5s ease-out;
 
-		&:hover {
-			color: #8a3ab9;
-		}
 	}
+
+	.github {
+			&:hover {
+				color: #24292e;
+				-webkit-transition: color 0.5s ease-out;
+				-moz-transition: color 0.5s ease-out;
+				-o-transition: color 0.5s ease-out;
+				transition: color 0.5s ease-out;
+			}
+		}
+
+		.instagram {
+			&:hover {
+				color: #8a3ab9;
+				-webkit-transition: color 0.5s ease-out;
+				-moz-transition: color 0.5s ease-out;
+				-o-transition: color 0.5s ease-out;
+				transition: color 0.5s ease-out;
+			}
+		}
+
+		.soundcloud {
+			&:hover {
+				color: #f50;
+				-webkit-transition: color 0.5s ease-out;
+				-moz-transition: color 0.5s ease-out;
+				-o-transition: color 0.5s ease-out;
+				transition: color 0.5s ease-out;
+			}
+		}
 
 	.social-links {
 		display: flex;
@@ -482,6 +606,24 @@ body {
 		}
 
 		.main-message {
+			font-size: 1.4em;
+		}
+	}
+
+	.about {
+		h2 {
+			font-size: 1.4em;
+		}
+	}
+
+	.niche {
+		h2 {
+			font-size: 1.4em;
+		}
+	}
+
+	.contact {
+		h2 {
 			font-size: 1.4em;
 		}
 	}
