--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -1,5 +1,6 @@
 @import "node_modules/hamburgers/_sass/hamburgers/hamburgers.scss";
 @import "node_modules/bootstrap/scss/bootstrap.scss";
+@import url("node_modules/cookieconsent/build/cookieconsent.min.css");
 
 
 // variable declartions
